@@ -55,3 +55,5 @@ Mikael Sans <sans.mikael@gmail.com>
 Doyoun Kang <doyoun.kang@samsung.com>
 M.V.K. Sumanth <sumanth.m@samsung.com> <mvksumanth@gmail.com>
 Jérôme Pinot <ngc891@gmail.com>
+Davide Andreoli (davemds) <dave@gurumeditation.it>
+
